<resources>
    <string name="app_name">Energy Timer</string>
    <string name="action_settings">Settings</string>
    <string name="add_type">Create type</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Timer List</string>
    <string name="second_fragment_label">Timer type list</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="start">Start</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--    Timer Dialog -->
    <string name="dialog_timer">Add new timer</string>
    <string name="timer_name">Name</string>
    <string name="timer_description">Description</string>
    <string name="current_value">Current value</string>
    <string name="timer_type">Timer type</string>
    <string name="add_new_timer">Add new timer</string>
    <string name="type_list">Types List</string>

    <!--    Type Dialog -->
    <string name="dialog_type">Add new type</string>
    <string name="game_name">Game Name</string>
    <string name="type_description">Description</string>
    <string name="max_value">Max Value</string>
    <string name="tic">Time to generate</string>
    <string name="close">Close</string>
    <string name="restart">Restart</string>
    <string name="delete">Delete</string>
    <string name="current_time">Current Time</string>
    <string name="total_time">Total Time</string>
    <string name="finish_date">Finish Date</string>
    <string name="start_date">Start Date</string>
    <string name="time_to_generate">Time to generate</string>
    <string name="confirm">Confirm</string>
    <string name="delete_this_timer">Delete this timer</string>
    <string name="exit">Exit</string>
    <string name="update">Update</string>
    <string name="delete_this_type">Delete this timer type</string>

    <!--    <string name=""></string>-->
</resources>